# basic_sensor

./: .clang-format  .gitignore  README.md  usb_test_app.py
app/: CMakeLists.txt  main.c  prj.conf
app/boards/: nrf5340dk_nrf5340_cpuapp.overlay
app/include/: command_parser.h  data_thread.h  led.h  ring_buffer.h  sensor_thread.h  sim_sensor.h  usb_comm.h
app/src/: command_parser.c  data_thread.c  led.c  ring_buffer.c  sensor_thread.c  sim_sensor.c  usb_comm.c
tests/: pytest.ini  test_ring_buffer.py  test_sim_sensor.py
tests/test_utils/: usb_comm.py  usb_utils.py
usb_comm/: main.py  usb_utils.py
